[metadata]
name = NIKCLIP
version = 2.1
author = Nikhil Tamvada (Nikhilodeon1)
author_email = nikhiltamvada@gmail.com
description = A full fledged media-player and media-downloader
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB REPOSITORY LINK
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
include_package_data = True